--- a/BusinessManagementSoftware/BusinessManagementSoftware/BusinessManagementSoftware.csproj
+++ b/BusinessManagementSoftware/BusinessManagementSoftware/BusinessManagementSoftware.csproj
@@ -46,14 +46,51 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="BusinessManagementUi.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="BusinessManagementUi.Designer.cs">
+      <DependentUpon>BusinessManagementUi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoginUi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginUi.Designer.cs">
+      <DependentUpon>LoginUi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manager\ProductManager.cs" />
+    <Compile Include="Model\Product.cs" />
+    <Compile Include="ProductUi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductUi.Designer.cs">
+      <DependentUpon>ProductUi.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ConnectionDB.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
+    <Compile Include="Stock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Stock.Designer.cs">
+      <DependentUpon>Stock.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SupplierUi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SupplierUi.Designer.cs">
+      <DependentUpon>SupplierUi.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="BusinessManagementUi.resx">
+      <DependentUpon>BusinessManagementUi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginUi.resx">
+      <DependentUpon>LoginUi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductUi.resx">
+      <DependentUpon>ProductUi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,7 +99,14 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Stock.resx">
+      <DependentUpon>Stock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SupplierUi.resx">
+      <DependentUpon>SupplierUi.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -76,5 +120,21 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\abstract-modern-glowing-wave-transparent-background_1055-5178.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\user-login-icon-29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\add_to_basket-512.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\supplier-icon-png-22.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\out-of-stock-icon-22.jpg" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
